--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,7 +1,9 @@
 .Logo {
     background-color: white;
     padding: 8px;
-    height :100px;
+    height :80%;
+    box-sizing: border-box;
+    border-radius:5px
 
 }
 
