--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -9,14 +9,20 @@
  font-weight:bold;
  display: block;
  margin-bottom: 8px;
+ margin-top: 10px;
+ padding: 6px;
+ font-family: cursive;
 }
 
 .InputElement {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
     outline: none;
     border:1px solid #ccc;
     background-color: white;
     font: inherit;
-    padding: 6px 10px;
+  
     display: block;
     width: 100%;
     box-sizing: border-box;
@@ -26,4 +32,33 @@
 .InputElement:focus {
  outline: none;
  background-color: #ccc;
+}
+
+.ContactData {
+    margin: 20px auto;
+    width:80%;
+    box-shadow: 0 2px 3px #ccc;
+    border: 1px solid #eee;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.Error {
+    color:#CF8F2E;
+    margin: 10px; 
+    font-Weight:bold;
+    font-size: 13px;
+
+}
+.Button {
+    background-color: transparent;
+    border: none;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    font: inherit;
+    padding: 10px;
+    margin: 10px;
+    font-weight: bold;
+    color: #5C9210;
 }
